--- a/SistemaAcademia/pom.xml
+++ b/SistemaAcademia/pom.xml
@@ -24,6 +24,11 @@
     </plugins>
   </build>
   <dependencies>
+	  <dependency>
+		  <groupId>com.github.librepdf</groupId>
+		  <artifactId>openpdf</artifactId>
+		  <version>1.3.30</version>
+	   </dependency>
 	  <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
     	<groupId>mysql</groupId>
