--- a/SistemaAcademia/pom.xml
+++ b/SistemaAcademia/pom.xml
@@ -35,5 +35,12 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>8.0.31</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20220924</version>
+	</dependency>
+
   </dependencies>
 </project>
