--- a/SistemaAcademia/pom.xml
+++ b/SistemaAcademia/pom.xml
@@ -41,6 +41,13 @@
 	    <artifactId>json</artifactId>
 	    <version>20220924</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+	<dependency>
+	    <groupId>joda-time</groupId>
+	    <artifactId>joda-time</artifactId>
+	    <version>2.12.2</version>
+	</dependency>
+
 
   </dependencies>
 </project>
