--- a/SistemaAcademia/pom.xml
+++ b/SistemaAcademia/pom.xml
@@ -25,6 +25,16 @@
   </build>
   <dependencies>
 	  <dependency>
+		   <groupId>ch.qos.logback</groupId>
+		   <artifactId>logback-classic</artifactId>
+		   <version>1.2.3</version>
+	</dependency>
+	  <dependency>
+		 <groupId>com.github.sarxos</groupId>
+		 <artifactId>webcam-capture</artifactId>
+		 <version>0.3.12</version>
+	  </dependency>
+	  <dependency>
 		  <groupId>com.github.librepdf</groupId>
 		  <artifactId>openpdf</artifactId>
 		  <version>1.3.30</version>
@@ -47,7 +57,5 @@
 	    <artifactId>joda-time</artifactId>
 	    <version>2.12.2</version>
 	</dependency>
-
-
   </dependencies>
 </project>
