--- a/SistemaAcademia/pom.xml
+++ b/SistemaAcademia/pom.xml
@@ -25,6 +25,11 @@
   </build>
   <dependencies>
 	  <dependency>
+		  <groupId>commons-validator</groupId>
+		  <artifactId>commons-validator</artifactId>
+		  <version>1.6</version>
+	</dependency>
+	  <dependency>
 		 <groupId>com.github.sarxos</groupId>
 		 <artifactId>webcam-capture</artifactId>
 		 <version>0.3.12</version>
