--- a/SistemaAcademia/pom.xml
+++ b/SistemaAcademia/pom.xml
@@ -35,6 +35,12 @@
 		 <version>0.3.12</version>
 	  </dependency>
 	  <dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+  	   </dependency>
+	  <dependency>
 		  <groupId>com.github.librepdf</groupId>
 		  <artifactId>openpdf</artifactId>
 		  <version>1.3.30</version>
